@@ -37,6 +37,8 @@ typedef struct Global_atom
 	Atom _NET_WM_DESKTOP;
 	Atom WM_STATE;
 	Atom _NET_WM_STATE;
+	Atom _NET_WM_STATE_MAXIMIZED_VERT;
+	Atom _NET_WM_STATE_MAXIMIZED_HORZ;
 	Atom _NET_WM_STATE_SHADED;
 	Atom _NET_WM_STATE_BELOW;
 	Atom _NET_WM_STATE_MODAL;
